--- a/index.html
+++ b/index.html
@@ -16,31 +16,67 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark navbar-red fixed-top">
-            <a class="navbar-brand" href="#"><img src="./images/logo1.png" alt="logo" width="150" class="img-fluid"></a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation"></button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="main-nav navbar-nav ml-auto mt-2 mt-lg-0">
+    <header class="d-md-none d-sm-none d-none d-lg-block d-xl-block">
+        <nav class="navbar navbar-expand-sm navbar-dark navbar-red">
+            <ul class="main-nav navbar-nav mr-auto mt-5">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">15<sup>th</sup> October, 2019 </a>
+                </li>
+            </ul>
+            <a class="mx-auto" href="#"><img src="./images/logo1.png" alt="logo" width="400" class="img-fluid"></a>
+               <ul class="main-nav navbar-nav ml-auto mt-5">
                     <li class="nav-item">
                         <a class="nav-link signin" href="#">sign in</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">subscribe</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
-                    </li>
                 </ul>
-            </div>
+            
+        </nav>
+        <div class="container-ramar">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white nav-2">
+                <div class="navbar-collapse collapse" id="navbarCollapse">
+                    <ul class="flex-fill navbar-nav mr-auto my-2">
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">U.S</a></li>
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">World</a></li>
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">Tech &
+                                Science</a></li>
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">Culture</a>
+                        </li>
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">Sports</a>
+                        </li>
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">Health</a>
+                        </li>
+                        <li class="nav-item border-right px-auto flex-fill"><a class="nav-link text-dark text-center">Opinion</a>
+                        </li>
+                        <li class="nav-item"><a class="btn btn-white text-black-50">Search <i class="fa fa-search" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+                <a href="#"></a>
+            </nav>
+        </div>
+    </header>
+    <header class="d-lg-none d-xl-none">
+        <nav class="navbar navbar-expand-sm navbar-dark navbar-red fixed-top">
+            <a href="#"><img src="./images/logo1.png" alt="logo" width="100" class="img-fluid"></a>
+            <ul class="main-nav navbar-nav ml-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link signin" href="#">sign in</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">subscribe</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main class="main">
         <div class="container-ramar bg-white mt-1 mx-auto">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-5">
                     <p class="sec-title text-muted py-2">Featured stories</p>
                     <article class="card text-dark">
                         <img class="card-img-top" src="https://source.unsplash.com/random/800x500" alt="image">
@@ -79,7 +115,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6 col-md-7">
                     <p class="sec-title py-2">TOP Story</p>
                     <article class="card text-dark">
                         <img class="card-img-top" src="https://source.unsplash.com/random/800x500" alt="image">
@@ -225,7 +261,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-12">
                     <p class="sec-title py-2">Opinion</p>
                     <ul class="list-unstyled">
                         <li class="media media-opinions border-bottom py-2">
@@ -454,7 +490,7 @@
                     </h3>
                 </div>
 
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <article class="card text-dark">
                         <img class="card-img-top" src="https://source.unsplash.com/random/800x500" alt="image">
                         <span class="text-overlay">WORLD</span>
@@ -465,7 +501,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <article class="card text-dark">
                         <img class="card-img-top" src="https://source.unsplash.com/random/800x500" alt="image">
                         <span class="text-overlay">WORLD</span>
@@ -476,7 +512,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <article class="card text-dark">
                         <img class="card-img-top" src="https://source.unsplash.com/random/800x500" alt="image">
                         <span class="text-overlay">WORLD</span>
@@ -487,7 +523,7 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-md-3">
+                <div class="col-lg-3 col-md-6">
                     <article class="card text-dark">
                         <img class="card-img-top" src="https://source.unsplash.com/random/800x500" alt="image">
                         <span class="text-overlay">WORLD</span>
