- Added links to footer - Combined Media queries

--- a/index.html
+++ b/index.html
@@ -1003,19 +1003,19 @@
                 <div class="row">
                     <div class="col-md-8">
                         <ul class="list-inline">
-                            <li class="list-inline-item pr-2 border-right">About Us</li>
-                            <li class="list-inline-item pr-2 border-right">Corrections</li>
-                            <li class="list-inline-item pr-2 border-right">Contact Us</li>
-                            <li class="list-inline-item pr-2 border-right">Editorial Guidelines</li>
-                            <li class="list-inline-item pr-2 border-right">Advertise</li>
-                            <li class="list-inline-item pr-2 border-right">Copyright</li>
-                            <li class="list-inline-item pr-2 border-right">Terms &amp; Conditions</li>
-                            <li class="list-inline-item pr-2 border-right">Privacy Policy</li>
-                            <li class="list-inline-item pr-2 border-right">Cookie Policy</li>
-                            <li class="list-inline-item pr-2 border-right">Terms of Sale</li>
-                            <li class="list-inline-item pr-2 border-right">Archive</li>
-                            <li class="list-inline-item pr-2 border-right">Announcements</li>
-                            <li class="list-inline-item ">Consent preferences</li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">About Us</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Corrections</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Contact Us</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Editorial Guidelines</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Advertise</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Copyright</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Terms &amp; Conditions</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Privacy Policy</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Cookie Policy</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Terms of Sale</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Archive</a></li>
+                            <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Announcements</a></li>
+                            <li class="list-inline-item "><a href="#" class="text-muted">Consent preferences</a></li>
                         </ul>
                     </div>
 
@@ -1024,13 +1024,13 @@
                             <ul class="list-inline">
                                 <li class="list-inline-item pr-3">
                                     <strong class="editions">Editions: </strong></li>
-                                <li class="list-inline-item pr-2 border-right">U.S. Edition</li>
-                                <li class="list-inline-item pr-2 border-right">Middle East</li>
-                                <li class="list-inline-item pr-2 border-right">日本</li>
-                                <li class="list-inline-item pr-2 border-right">한국</li>
-                                <li class="list-inline-item pr-2 border-right">Pakistan</li>
-                                <li class="list-inline-item pr-2 border-right">Polska</li>
-                                <li class="last list-inline-item">România</li>
+                                <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">U.S. Edition</a></li>
+                                <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Middle East</a></li>
+                                <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">日本</a></li>
+                                <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">한국</a></li>
+                                <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Pakistan</a></li>
+                                <li class="list-inline-item pr-2 border-right"><a href="#" class="text-muted">Polska</a></li>
+                                <li class="last list-inline-item"><a href="#" class="text-muted">România</a></li>
                             </ul>
                         </div>
                     </div>
